// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/proto/examples/proto/proto";
option java_multiple_files = true;
option java_package = "io.proto.examples.proto";
option java_outer_classname = "HelloWorldProto";

package proto;

// The greeting service definition.
service ServiceTwo {
  rpc UpdateLastName (UpdateLastNameRequest) returns (UpdateLastNameResponse) {}
  rpc RollbackTwo (RollbackTwoRequest) returns (RollbackTwoResponse) {}
}

// The request message containing the user's name.
message UpdateLastNameRequest {
  int64 users_id = 1;
  string last_name = 2;
}

// The response message containing the greetings
message UpdateLastNameResponse {
  string error = 1;
  string table_name = 2;
  int64 row_id = 3;
}


message RollbackTwoRequest {
  string table_name = 1;
  int64 id = 2;
}

message RollbackTwoResponse {
  bool success = 1;
}